fix dashboard layout issues done

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -57,3 +57,6 @@ html {
   color:$dark-text;
 }
 
+.minH{
+  height: calc(100vh - 60px);
+}
